panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__test_error_definition_of_array_of_unknown_size.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_definition_of_array_of_unknown_size.c
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition xs~1 `array<int; ∅>` ∅))))

----- stderr -----
