panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__test_error_uncallable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_uncallable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression (call 42))
         (expression (call (call (name f~0 `fn() -> void`)))))))

----- stderr -----
